# taskledger

./: .codecrate.toml  .gitignore  .planledger.toml  .releaseledger.toml  .specweave.toml  .taskledger.toml  AGENTS.md  API.md  ARCHITECTURE.md  CHANGELOG.md  README.md  pyproject.toml
.archledger/records/constraints/: al_constraint_0016.md
.archledger/records/risks/: al_risk_0060.md
.archledger/records/runtime/: al_runtime_0084.md
.archledger/sections/: al_content_0002.md
.github/workflows/: tests.yml
docs/: api.md  api.rst  architecture_taskledger_split.md  command_contract.md  command_contract.rst  conf.py  full_task_cycle.md  full_task_cycle.rst  index.md  index.rst  multi_repo.md  public_surface.md  public_surface.rst  requirements.txt  service_boundary_whitelist.md  service_boundary_whitelist.rst  sync.md  sync.rst  transfer.md  transfer.rst  usage.md  usage.rst
skills/taskledger/: SKILL.md
specs/behavior/: README.md
specs/behavior/features/plan_lint/: plan-lint.feature
taskledger/: cli.py  cli_bdd.py  cli_config.py  cli_implement.py  cli_misc.py  cli_plan.py  cli_release.py  cli_storage.py  cli_sync.py  cli_task.py  cli_validate.py  command_inventory.py  exchange.py
taskledger/api/: __init__.py  bdd.py  config.py  plans.py  project.py  sync.py  task_runs.py  tasks.py
taskledger/domain/: _model_utils.py  active_state.py  actor.py  bdd.py  change.py  event.py  handoff.py  lock.py  models.py  plan.py  question.py  release.py  run.py  sidecars.py  states.py  task.py
taskledger/services/: agent_transcripts.py  bdd_gherkin.py  bdd_reports.py  command_runner.py  dashboard.py  doctor.py  file_links.py  git_sync.py  handoff.py  implementation_flow.py  lock_diagnostics.py  markdown_html.py  monitor.py  navigation.py  plan_input.py  plan_materialization.py  plan_review.py  planning_flow.py  releases.py  run_store.py  task_collections.py  task_export.py  tasks.py  trace.py  usage.py  validation.py  validation_flow.py  web_dashboard.py  worker_context.py  worker_pipeline.py  workflow_guidance.py  workspace_snapshot.py
taskledger/services/doctor_checks/: migration_checks.py  project_scan.py  task_checks.py
taskledger/storage/: init.py  ledger_config.py  project_config.py  project_identity.py  task_store.py  worker_pipeline_config.py
taskledger/tui/: app.py
taskledger/web_assets/: dashboard.css  dashboard.js
tests/: conftest.py  test_bdd_cli.py  test_bdd_gherkin.py  test_bdd_models.py  test_bdd_report_import.py  test_bdd_storage.py  test_bdd_validation_integration.py  test_cli_command_contract.py  test_command_example_linter.py  test_command_inventory.py  test_config_cli.py  test_delta_remaining_contracts.py  test_docs_and_skill.py  test_doctor.py  test_file_link_snapshots.py  test_help_subprocess.py  test_import_boundaries.py  test_json_contracts.py  test_lock_diagnostics.py  test_monitor.py  test_no_log_feature.py  test_plan_input.py  test_plan_input_cli.py  test_plan_lint.py  test_plan_review.py  test_plan_revision_workflow.py  test_project_root_config.py  test_question_plan_regeneration.py  test_release_changelog.py  test_serve_dashboard.py  test_service_boundaries.py  test_services_dashboard.py  test_storage_sync.py  test_sync_git.py  test_task_markdown_export.py  test_task_report.py  test_taskledger_cli_api_parity.py  test_taskledger_v2_cli.py  test_taskledger_v2_exchange.py  test_trace.py  (+5 more)
