[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["taskledger*"]

[tool.setuptools.package-data]
taskledger = [
    "py.typed",
]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config"
testpaths = ["tests"]
python_files = "test_*.py"
markers = [
    "specweave: links a pytest test to a canonical behavior scenario",
    "unit: pure domain/service/storage tests without full CLI workflows",
    "cli: exercises the Typer CLI surface",
    "integration: exercises multiple taskledger layers or a full lifecycle",
    "slow: intentionally slower than normal unit tests",
    "subprocess: starts a child process or managed shell command",
    "git: shells out to git or requires a git repository",
]

[project]
name = "taskledger"
description = "Durable project-state storage and CLI for coding workflows"
authors = [{name = "Taskledger Contributors"}]
maintainers = [{name = "Holger Nahrstaedt"}]
requires-python = ">=3.10"
readme = "README.md"
license = "Apache-2.0"
keywords = ["cli", "durable-state", "project-state", "developer-tools", "workflows"]
dependencies = [
    "typer",
    "click",
    "PyYAML",
    "ledgercore>=0.2.0",
    'tomli; python_version < "3.11"',
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Utilities",
]

dynamic=["version"]

[project.scripts]
taskledger = "taskledger.launcher:main"

[project.urls]
Homepage = "https://github.com/ledgerwerk/taskledger"
Repository = "https://github.com/ledgerwerk/taskledger"
Issues = "https://github.com/ledgerwerk/taskledger/issues"
Changelog = "https://github.com/ledgerwerk/taskledger/releases"

[project.optional-dependencies]
dev = [
    "build",
    "mypy",
    "pytest",
    "pytest-xdist",
    "ruff",
    "twine",
    "types-PyYAML",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "myst-parser",
    "rst-to-myst",
]
rich = [
    "rich",
]

[tool.setuptools_scm]
write_to = "taskledger/_version.py"

[tool.tox]
legacy_tox_ini = """

[testenv]
deps =
    pytest
commands =
    pytest -q -m 'not slow and not integration' {posargs}

[testenv:integration]
deps =
    pytest
    pytest-xdist
commands =
    pytest -q -m 'slow or integration' -n auto --dist=worksteal {posargs}

[testenv:full]
deps =
    pytest
    pytest-xdist
commands =
    pytest -q -n auto --dist=worksteal {posargs}
"""

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
exclude = [
]
